Fix error handling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           type="text"
           name=""
           id="task-input"
-          placeholder="Start writing and press enter to create task"
+          placeholder="Start writing and press enter to create a task"
         />
         <button id="submit-btn">
           <img src="./assets/enter.svg" alt="enter-btn" />
